fixes text align in services

--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -14,4 +14,5 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 28px;
+    text-align: left;
 }
